# SCOUT-6530

./: CHANGELOG.md  HANDOFF_UNIVERSAL_CHAINING.md  README.ko.md  README.md  er605_top_20_real.json  exploit_runner.py  pyproject.toml  scout  tuf_top_20.json  tuf_top_20_real.json
.antigravitycli/: 8fe809ce-e3bd-4271-ba05-22388d78649b.json
docs/: aeg_e2e_validation.md  er605_poc_quality.md  exploit-pattern-rag.md  exploit_dag_contract.md  llm_driver_degradation_matrix.md  phase0_phase1_readiness.md  phase3_aeg_plan_ir.md  scout_zero_day_aeg_develop_plan.md  status.md
scout2/: scout2_main.py  scout2_report.json
scratch/: check_import.py  debug_inventory.py
scripts/: build_phase0_phase1_readiness.py  build_phase3_aeg_readiness.py  build_verified_chain.py  check_exploit_pattern_evidence.py  check_real_firmware_pair_aeg.py  check_report_evidence.py  import_poc_in_github_candidates.py  record_pattern_pair_evidence.py  run_aeg_synthetic_pair.py  run_real_firmware_pair_aeg.py  verify_exploit_meaningfulness.py  verify_verified_chain.py
tests/: test_build_verified_chain.py  test_chain_constructor_channels.py  test_exploit_autopoc_stage.py  test_exploit_dag_stages.py  test_exploit_intel_stage.py  test_exploit_pattern_evidence_gate.py  test_exploit_pattern_rag.py  test_exploit_rag_importers.py  test_exploit_runner.py  test_exploitability_dossier_stage.py  test_llm_driver.py  test_llm_driver_conformance.py  test_pattern_pair_evidence_recorder.py  test_phase01_readiness.py  test_poc_validation_stage.py  test_real_firmware_pair_aeg_gate.py  test_run_real_firmware_pair_aeg.py  (+4 more)
(+57 files in other folders)
