[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scout-firmware"
version = "2.7.3"
description = "Firmware-to-exploit evidence engine with deterministic evidence packaging and hash-anchored artifact chains"
license = {text = "Apache-2.0"}
dependencies = []

[project.scripts]
scout = "aiedge.__main__:main"
aiedge = "aiedge.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.pyright]
extraPaths = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402"]

[tool.ruff.lint.per-file-ignores]
"src/aiedge/ghidra_scripts/*" = ["F821"]
